src/snapshots/tptp__fof__tests__fof_logic_formula-9.snap
---
source: src/fof.rs
expression: parsed
---
Unitary(
    Atomic(
        Plain(
            PlainAtomicFormula(
                Constant(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "p",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
