src/snapshots/tptp__fof__tests__fof_logic_formula.snap
---
source: src/fof.rs
expression: parsed
---
Unary(
    Unary(
        UnaryConnective,
        Unitary(
            Atomic(
                Plain(
                    PlainAtomicFormula(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "p",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
