src/snapshots/tptp__fof__tests__fof_plain_atomic_formula.snap
---
source: src/fof.rs
expression: parsed
---
PlainAtomicFormula(
    Function(
        Functor(
            Lower(
                LowerWord(
                    "f",
                ),
            ),
        ),
        Arguments(
            [
                Variable(
                    Variable(
                        UpperWord(
                            "X",
                        ),
                    ),
                ),
                Function(
                    Plain(
                        Function(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "g",
                                    ),
                                ),
                            ),
                            Arguments(
                                [
                                    Variable(
                                        Variable(
                                            UpperWord(
                                                "Y",
                                            ),
                                        ),
                                    ),
                                ],
                            ),
                        ),
                    ),
                ),
            ],
        ),
    ),
)
