src/snapshots/tptp__fof__tests__fof_plain_term-3.snap
---
source: src/fof.rs
expression: parsed
---
Function(
    Functor(
        Lower(
            LowerWord(
                "f",
            ),
        ),
    ),
    Arguments(
        [
            Variable(
                Variable(
                    UpperWord(
                        "X",
                    ),
                ),
            ),
        ],
    ),
)
