src/snapshots/tptp__fof__tests__fof_plain_term.snap
---
source: src/fof.rs
expression: parsed
---
Constant(
    Constant(
        Functor(
            Lower(
                LowerWord(
                    "c",
                ),
            ),
        ),
    ),
)
