src/snapshots/tptp__fof__tests__fof_system_atomic_formula.snap
---
source: src/fof.rs
expression: parsed
---
SystemAtomicFormula(
    Constant(
        SystemConstant(
            SystemFunctor(
                AtomicSystemWord(
                    DollarDollarWord(
                        LowerWord(
                            "system",
                        ),
                    ),
                ),
            ),
        ),
    ),
)
