src/snapshots/tptp__fof__tests__fof_system_term-3.snap
---
source: src/fof.rs
expression: parsed
---
Function(
    SystemFunctor(
        AtomicSystemWord(
            DollarDollarWord(
                LowerWord(
                    "f",
                ),
            ),
        ),
    ),
    Arguments(
        [
            Variable(
                Variable(
                    UpperWord(
                        "X",
                    ),
                ),
            ),
        ],
    ),
)
